# XiYan-SQL

./: .gitignore  CLAUDE.md
XiYan-SQLTraining/: COLAB_EVALUATION.ipynb  COLAB_TRAINING.ipynb  LOW_MEMORY_TRAINING.md  QUICK_START.md  README.md  TRAINING_3B_QUICKSTART.md  TRAINING_STRATEGIES.md  pyproject.toml  quick_test.py  run_quick_test.sh
XiYan-SQLTraining/data/: assemble_all_generators.sh  data_assembler.py  data_assembler.sh  data_processing.sh  split_data.py  split_data.sh
XiYan-SQLTraining/data/configs/: README_GENERATORS.md  datasets_all.json  datasets_minidev_test.json  datasets_nl2sql_standard.json  datasets_nl2sql_standard_test.json  datasets_nl2sql_standard_train.json  datasets_sqlg1_heavy_aug.json  datasets_sqlg2_moderate_aug.json  datasets_sqlg3_light_aug.json  datasets_sqlg4_no_aug.json
XiYan-SQLTraining/data/data_utils/: call_llamaindex_llm.py  prompt_utils.py  schema_engine.py
XiYan-SQLTraining/data/data_warehouse/test_data/mschema/: movie_platform.txt
XiYan-SQLTraining/data/data_warehouse/test_data/raw_data/: test_train.json
XiYan-SQLTraining/evaluation/: run_baseline_inference.sh  sql_eval.sh  sql_infer.py  sql_infer.sh
XiYan-SQLTraining/evaluation/datasets/: nl2sql_standard_test.json
XiYan-SQLTraining/train/: TRAINING_GUIDE_3B.md  sft4xiyan.py  xiyan_sft_3b.sh  xiyan_sft_3b_colab.sh  xiyan_sft_3b_low_mem.sh
XiYan-SQLTraining/train/config/: dp_zero3_offload.json  zero3_offload.yaml
XiYan-SQLTraining/train/datasets/: Untitled
XiYan-SQLTraining/train/trainer/: trainer.py
XiYan-SQLTraining/train/utils/: model_download.py
(+1 files in other folders)
